Fixed project section
fixed project section overlapping tile

--- a/flickr-inspired/styles.css
+++ b/flickr-inspired/styles.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+*::before, *::after {
+    box-sizing: inherit;
+}
+
 html {
     scroll-behavior: smooth;
   }
@@ -89,7 +93,10 @@ li{
 #projects {
     background-color: #E6DDC4;
     width: 100%;
-    height: 800px;
+    height: 100%;
+    padding-top: 80px;
+    padding-bottom: 50px;
+    margin-bottom: -95px;
 }
 
 .project-container {
@@ -110,7 +117,7 @@ li{
     text-align: center;
 }
 
-.project-header {
+#project-header {
     font-size: 30px;
     text-align: center;
     padding-top: 50px;
@@ -122,7 +129,7 @@ li{
     background-color: #F0E9D2;
     color: #181D31; 
     width: 100%;
-    height: 540px;
+    height: 940px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,4 +162,11 @@ footer {
     width: 100%;
     height: 50px;
     padding-top: 10px;
+}
+
+
+@media only screen and (max-width: 1200px){
+    html {
+        font-size: 10px;
+    }
 }
